--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         </div>
 
         <section class="cardapio">
-            <div id="box-cardapio container">
+            <div class="box-cardapio container">
                 <div class="days-week">
                     <h2>Cardápio</h2>
                     <div class="box-btn-cardapio">
@@ -149,9 +149,100 @@
                 <div class="dishes-day">
                     <div class="col-1">
                         <h3 class="d-none">Pratos do dia</h3>
-                        <div class="box-dish-main"></div>
-                        <div class="box-dish"></div>
+                        <div id="box-dish-main">
+                            <div>
+                                <h4>Virado a Paulista</h4>
 
+                                <div class="contents-box-dish">
+                                    <div class="contents-dish-left">
+
+                                        <p>Prato Feito<small>(Serve 1 pessoa)</small></p>
+                                        <p>Fit<small>(Serve 1 Pessoa</small> </p>
+                                    </div>
+                                    <div class="prices-dish-right">
+                                        <p>R$ 30</p>
+                                        <p>R$ 20</p>
+
+                                    </div>
+
+
+                                </div>
+                            </div>
+                            <div id="box-dish">
+                                <div>
+                                    <div class="dish">
+                                        <h4>Filé de Frango a parmegiana</h4>
+                                        <div class="contents-box-dish">
+                                            <div class="contents-dish-left">
+                                                <p>Prato Feito<small>(Serve 1 Pessoa)</small></p>
+                                                <p>Fit<small>(Serve 1 Pessoa)</small></p>
+
+                                            </div>
+                                            <div class="prices-dish-right">
+                                                <p>R$ 21</p>
+                                                <p>R$ 16</p>
+
+                                            </div>
+
+                                        </div>
+
+                                    </div>
+
+
+
+                                </div>
+
+
+
+                            </div>
+                            <div>
+                                <div class="dish">
+                                    <h4>Picadinho</h4>
+
+                                    <div class="contents-box-dish">
+                                        <div class="contents-dish-left">
+                                            <p>Prato Feito<small>(Serve 1 Pessoa)</small></p>
+                                            <p>Fit<small>(Serve 1 Pessoa)</small></p>
+                                        </div>
+                                        <div class="prices-dish-right">
+                                            <p>R$ 15</p>
+                                            <p>R$ 25</p>
+
+                                        </div>
+
+
+
+
+
+
+
+
+                                    </div>
+
+
+
+
+
+
+
+
+
+
+
+                                </div>
+
+
+
+
+
+
+
+
+
+
+                            </div>
+
+                        </div>
                     </div>
                     <div class="right-col col-1"></div>
 
