menu and gallery

--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
     <header class="container">
         <div class="menu-mobile">
             <div class="logo">
-
             </div>
             <div class="btn-menu-mobile">
                 <i class="fas fa-bars"></i>
@@ -42,7 +41,6 @@
                 <li><a class="item-menu" href="#gallery">Galeria</a></li>
                 <li><a class="item-menu" href="#contact">Contato</a></li>
             </ul>
-
         </nav>
     </header>
     <main>
@@ -65,7 +63,6 @@
                         </a>
                     </div>
                 </div>
-
                 <div class="right-banner">
                     <img src="_assets/img/feijoada_banner.png" alt="feijoada">
                 </div>
@@ -81,7 +78,6 @@
                         <div class="text-center description-banner">
                             <p>Atendimento de Segunda à Sábado das 11h às 15h</p>
                             <p>Fazemos também Delivery ou Retirada</p>
-
                             <a target="_blank"
                                 href="https://api.whatsapp.com/send?phone=5519971489054&text=Ol%C3%A1,%20gostaria%20de%20fazer%20um%20pedido">
                                 <button>Faça seu pedido<i class="fab fa-whatsapp"></i>
@@ -89,28 +85,20 @@
                             </a>
                         </div>
                     </div>
-
                     <div class="right-banner">
                         <img src="_assets/img/virado_a_paulista.png" alt="feijoada">
                     </div>
                 </div>
-
-
-
-
             </div>
         </div>
 
         <div class="controls-slide text-center">
             <i class="slide-1 fas fa-chevron-circle-left"></i>
             <i class="slide-2 fas fa-chevron-circle-right"></i>
-
         </div>
-
         <div class="box-arrow-down text-center">
             <a href="#cardapio"><i class="fas fa-arrow-down"></i></a>
         </div>
-
         <section class="cardapio">
             <div class="box-cardapio container">
                 <div class="days-week">
@@ -118,54 +106,40 @@
                     <div class="box-btn-cardapio">
                         <a id="select-segunda">
                             <div class="btn-cardapio">Segunda</div>
-
                         </a>
                         <a id="select-terca">
                             <div class="btn-cardapio">Terça</div>
-
                         </a>
                         <a id="select-quarta">
                             <div class="btn-cardapio">Quarta</div>
-
                         </a>
                         <a id="select-quinta">
                             <div class="btn-cardapio">Quarta</div>
-
                         </a>
                         <a id="select-sexta">
                             <div class="btn-cardapio">Sexta</div>
-
                         </a>
                         <a id="select-sabado">
                             <div class="btn-cardapio">Sábado</div>
-
                         </a>
-
-
                     </div>
-
-
                 </div>
                 <div class="dishes-day">
                     <div class="col-1">
                         <h3 class="d-none">Pratos do dia</h3>
                         <div id="box-dish-main">
-                            <div>
+                            <div class="first-dish">
                                 <h4>Virado a Paulista</h4>
 
                                 <div class="contents-box-dish">
                                     <div class="contents-dish-left">
-
                                         <p>Prato Feito<small>(Serve 1 pessoa)</small></p>
                                         <p>Fit<small>(Serve 1 Pessoa</small> </p>
                                     </div>
                                     <div class="prices-dish-right">
                                         <p>R$ 30</p>
                                         <p>R$ 20</p>
-
                                     </div>
-
-
                                 </div>
                             </div>
                             <div id="box-dish">
@@ -176,24 +150,14 @@
                                             <div class="contents-dish-left">
                                                 <p>Prato Feito<small>(Serve 1 Pessoa)</small></p>
                                                 <p>Fit<small>(Serve 1 Pessoa)</small></p>
-
                                             </div>
                                             <div class="prices-dish-right">
                                                 <p>R$ 21</p>
                                                 <p>R$ 16</p>
-
                                             </div>
-
                                         </div>
-
                                     </div>
-
-
-
                                 </div>
-
-
-
                             </div>
                             <div>
                                 <div class="dish">
@@ -207,44 +171,56 @@
                                         <div class="prices-dish-right">
                                             <p>R$ 15</p>
                                             <p>R$ 25</p>
-
                                         </div>
-
-
-
-
-
-
-
-
                                     </div>
-
-
-
-
-
-
-
-
-
-
-
                                 </div>
-
-
-
-
-
-
-
-
-
-
                             </div>
-
                         </div>
                     </div>
-                    <div class="right-col col-1"></div>
+                    <div class="right-col col-1">
+                        <div>
+                            <div class="dish">
+                                <h4>Sobremesas</h4>
+                                <div class="contents-box-dish">
+                                    <div class="contents-dish-left">
+                                        <p>Pudim Cremoso</p>
+                                        <p>Taça da Felicidade</p>
+                                    </div>
+                                    <div class="prices-dish-right">
+                                        <p>R$ 8</p>
+                                        <p>R$ 12</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <sectiom id="galeria">
+            <div class="box-galeria container">
+                <div id="container-fotos">
+                    <div class="container-fotos">
+                        <h2>Galeria</h2>
+                        <div class="box-fotos">
+
+                            <img class="img-fluid small-img" src="./_assets/Photograph/bife-a-role.jpg" alt="foto1">
+                            <img class="img-fluid small-img" src="./_assets/Photograph/file-a-parmegiana.jpg"
+                                alt="foto2">
+                            <img class="img-fluid small-img" src="./_assets/Photograph/macarrao-com-frango.jpg"
+                                alt="foto3">
+                            <img class="img-fluid small-img" src="./_assets/Photograph/ovo-bisteca.jpg" alt="foto4">
+                            <img class="img-fluid small-img" src="./_assets/Photograph/panqueca.jpg" alt="foto5">
+                            <img class="img-fluid small-img" src="./_assets/Photograph/macarronada.jpg" alt="foto6">
+                            <img class="img-fluid small-img" src="./_assets/Photograph/calabresa-acebolado.jpg"
+                                alt="foto7">
+                            <img class="img-fluid small-img" src="./_assets/Photograph/prato-feijoada.jpg" alt="foto8">
+
+                        </div>
+
+                    </div>
+
+
 
                 </div>
 
@@ -254,13 +230,10 @@
 
 
 
-        </section>
 
-
-
+        </sectiom>
     </main>
-
-
 </body>
+<script src="https://kit.fontawesome.com/2621df46d3.js" crossorigin="anonymous"></script>
 
 </html>
