--- a/index.html
+++ b/index.html
@@ -199,10 +199,10 @@
         </section>
         <sectiom id="galeria">
             <div class="box-galeria container">
-                <div id="container-fotos">
-                    <div class="container-fotos">
+                <div id="container-foto">
+                    <div class="container-foto">
                         <h2>Galeria</h2>
-                        <div class="box-fotos">
+                        <div class="box-foto">
 
                             <img class="img-fluid small-img" src="./_assets/Photograph/bife-a-role.jpg" alt="foto1">
                             <img class="img-fluid small-img" src="./_assets/Photograph/file-a-parmegiana.jpg"
@@ -215,24 +215,106 @@
                             <img class="img-fluid small-img" src="./_assets/Photograph/calabresa-acebolado.jpg"
                                 alt="foto7">
                             <img class="img-fluid small-img" src="./_assets/Photograph/prato-feijoada.jpg" alt="foto8">
-
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div id="box-equipe" class="container">
+                <div id="container-equipe">
+                    <h2>Equipe</h2>
+                    <div id="box-foto-equipe">
+                        <div class="perfil-funcionario flex-center-full text-center">
+                            <img class="img-fluid" src="./_assets/Photograph/homem1.png" alt="foto-1">
+                            <h4>Luiz Carlos</h4>
+                            <p>Proprietário</p>
                         </div>
 
+                        <div class="perfil-funcionario flex-center-full text-center">
+                            <img class="img-fluid" src="./_assets/Photograph/mulher1.png" alt="foto-1">
+                            <h4>Luana</h4>
+                            <p>Administrativo</p>
+
+                        </div>
+                        <div class="perfil-funcionario flex-center-full text-center">
+                            <img class="img-fluid" src="./_assets/Photograph/homem2.png" alt="foto-1">
+                            <h4>Bruno</h4>
+                            <p>Cheff</p>
+
+                        </div>
+                        <div class="perfil-funcionario flex-center-full text-center">
+                            <img class="img-fluid" src="./_assets/Photograph/mulher2.png" alt="foto-1">
+                            <h4>Patrícia</h4>
+                            <p>Caixa</p>
+
+                        </div>
+                        <div class="perfil-funcionario flex-center-full text-center">
+                            <img class="img-fluid" src="./_assets/Photograph/homem1.png" alt="foto-1">
+                            <h4>Pedro</h4>
+                            <p>Garçon</p>
+
+                        </div>
+                        <div class="perfil-funcionario flex-center-full text-center">
+                            <img class="img-fluid" src="./_assets/Photograph/mulher1.png" alt="foto-1">
+                            <h4>Laura</h4>
+                            <p>Gerente</p>
+
+                        </div>
+                        <div class="perfil-funcionario flex-center-full text-center">
+                            <img class="img-fluid" src="./_assets/Photograph/homem2.png" alt="foto-1">
+                            <h4>Roberto</h4>
+                            <p>Motoboy</p>
+
+                        </div>
+                        <div class="perfil-funcionario flex-center-full text-center">
+                            <img class="img-fluid" src="./_assets/Photograph/mulher1.png" alt="foto-1">
+                            <h4>Sara</h4>
+                            <p>Analista</p>
+                        </div>
                     </div>
-
-
-
                 </div>
-
-
             </div>
-
-
-
-
-
         </sectiom>
     </main>
+    <footer>
+        <div id="contato" class="container">
+            <h2>Contato</h2>
+            <div id="localization" class="box-info-contato">
+                <i class="fas fa-map-marker-alt"></i>
+                <div class="address">
+                    <p>Av. Conselheiro Nébias, 111</p>
+                    <p>Santos - SP / CEP: 11075-320</p>
+                </div>
+            </div>
+            <div id="phone" class="box-info-contato">
+                <i class="fas fa-phone-alt"></i>
+                <p>(11) 222-2222 - (11) 9999-1111</p>
+            </div>
+            <div id="box-whats-delivery" class="box-info-contato text-align">
+                <div>
+                    <p>Delivery ou retirada, ligue ou peça via Whatsapp</p>
+                    <a target="blank"
+                        href="https;//api.whatsapp.com/send?phone=55119999999999&txt=Boa%20tarde!%20gostaria%20de%20fazer%20um%20pedido"
+                        id="whats">
+                        <h4>(11)9999-9999</h4> <i class="fab fa-whatsapp"></i>
+                    </a>
+
+                </div>
+                <img class="d-none img-fluid" src="./_assets/img/delivery.png" alt="icone moto delivery">
+            </div>
+            <div class="redes-sociais">
+                <!--aria-hidden="true"= faz com que programas leitores de tela não leiam esse elemento isso é útil para evitar o excesso de informações para pessoas com algum tipo de deficiência visual-->
+                <a target="_blank" href="https://pt-br.facebook.com/restaurante/">
+                    <i class="fab fa-facebook" aria-hidden="true"></i>
+                </a>
+                <a target="_blank" href="https://www.instagram.com/restaurante/">
+                    <i class="fab fa-instagram" aria-hidden="true"></i>
+                </a>
+            </div>
+            <div id="direitos" class="text-center">
+                <span>O Restaurante Rapa do Tacho</span>
+            </div>
+        </div>
+    </footer>
 </body>
 <script src="https://kit.fontawesome.com/2621df46d3.js" crossorigin="anonymous"></script>
 
