--- a/index.html
+++ b/index.html
@@ -276,20 +276,20 @@
         </sectiom>
     </main>
     <footer>
-        <div id="contato" class="container">
+        <div id="contact" class="container">
             <h2>Contato</h2>
-            <div id="localization" class="box-info-contato">
+            <div id="localization" class="box-info-contact">
                 <i class="fas fa-map-marker-alt"></i>
                 <div class="address">
                     <p>Av. Conselheiro Nébias, 111</p>
                     <p>Santos - SP / CEP: 11075-320</p>
                 </div>
             </div>
-            <div id="phone" class="box-info-contato">
+            <div id="phone" class="box-info-contact">
                 <i class="fas fa-phone-alt"></i>
                 <p>(11) 222-2222 - (11) 9999-1111</p>
             </div>
-            <div id="box-whats-delivery" class="box-info-contato text-align">
+            <div id="box-whats-delivery" class="box-info-contact text-align">
                 <div>
                     <p>Delivery ou retirada, ligue ou peça via Whatsapp</p>
                     <a target="blank"
